bk_ida/gccida/c3/canon_reg
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/canon_reg/src/cse.c:3334:4: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
|| insn_data_0[rtint].n_dups > 0) ) 
   ^~~~~~~~~~~
   insn_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/canon_reg/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/canon_reg/src/obj/cse.o] Error 1
